--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-pdf": "^5.7.0",
     "react-router-dom": "5.0.0",
     "react-scripts": "5.0.0",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
@@ -38,5 +40,4 @@
     ]
   },
   "proxy": "http://localhost:5000"
-
 }
